--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb+srv://Jarshan:<Drtr@411>@cluster0.ntlwm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI="mongodb+srv://Jarshan:Drtr%40411@cluster0.ntlwm.mongodb.net/mern_app?retryWrites=true&w=majority"
+
+
 PORT=5000
